// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BotText tests Should match the snapshot 1`] = `
<div
  className="bot__text"
/>
`;

exports[`it renders 1`] = `
<div
  className="bot__text"
>
  Bottext children
</div>
`;
